# sumi

./: Cargo.toml  flake.nix
examples/: gallery.rs
src/: graphics_context.rs  instances.rs  lazy_graphics_resource.rs  lib.rs  math.rs  memory.rs  memory_new.rs  svg.rs  view.rs
src/memory/: instances.rs
src/renderer/: colored_plane.rs  colored_plane_new.rs  colored_svg.rs  colored_svg_new.rs  filled_circle.rs  mod.rs  outlined_circle.rs  polyline.rs  rounded_rect.rs  svg.rs  svg_new.rs  text.rs
src/renderer/shaders/: colored_plane.wgsl  filled_circle.wgsl  mesh_2d.wgsl  outlined_circle.wgsl  polyline.wgsl  rounded_rect.wgsl  svg.wgsl  svg_color.wgsl
src/renderer/svg/: bind_group.rs  colored_svg.rs  mod.rs  svg.rs
src/resources/: centered_plane.rs  instancing_geometry.rs  mesh_2d.rs  mesh_2d_new.rs  mod.rs  plane.rs  polyline.rs  vertex.rs
