[package]
name = "sumi"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
glyphon = { path = "../glyphon" }
glam = "0.32.1"
image = "0.25.10"
log = "0.4.29"
lyon = "1.0.19"
pollster = "0.4.0"
slotmap = "1.1.1"
tiny-skia-path = "0.12.0"
usvg = "0.47.0"
uuid = "1.23.1"
wgpu = "29.0.3"
wgpu-hal = "29.0.3"
cosmic-text-kv = { path = "../cosmic-text-kv" }
lattice = { path = "../lattice" }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
jni_fn = "0.1.2"
ndk-sys = "0.6.0"
ash = "0.38.0"
raw-window-handle = "0.6.2"

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2.186"
objc = "0.2.7"
core-graphics = "0.25.0"
objc-foundation = "0.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.186"
objc = "0.2.7"
core-graphics = "0.25.0"
objc-foundation = "0.1.1"
